# deutsche-bahn-price-scraper

./: .gitignore  README.md  pyproject.toml
.actor/: Dockerfile  actor.json  example-input.json  input_schema.json
src/: main.py
src/bahn/: __init__.py  client.py  fahrplan.py  models.py  proxy.py
