[project]
name = "deutsche-bahn-price-scraper"
version = "0.2.0"
description = "Standalone Apify scraper for the bahn.de web API (OpenAPI-documented)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify>=2.0.0",
    "httpx>=0.28.1",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
